--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
             background: #334155;
             margin-left: 1rem;
         }
+
+        /* Animation for warning */
+        @keyframes pulse-orange {
+            0%, 100% { box-shadow: 0 0 0 0 rgba(249, 115, 22, 0.4); }
+            50% { box-shadow: 0 0 0 10px rgba(249, 115, 22, 0); }
+        }
+        .animate-pulse-custom {
+            animation: pulse-orange 2s infinite;
+        }
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -305,6 +314,33 @@
             </div>
 
         </div>
+
+        <!-- ==================== IMPORTANT WARNING SECTION ==================== -->
+        <div class="mt-16 bg-gradient-to-r from-orange-900/40 to-[#1E293B] border border-orange-500/50 rounded-2xl p-6 relative overflow-hidden shadow-[0_0_20px_rgba(249,115,22,0.15)]">
+            <!-- Glow effect -->
+            <div class="absolute -top-10 -right-10 w-40 h-40 bg-orange-500/20 rounded-full blur-3xl"></div>
+
+            <div class="flex flex-col md:flex-row items-center gap-6 relative z-10">
+                <!-- Icon -->
+                <div class="w-16 h-16 rounded-full bg-orange-500/20 flex items-center justify-center flex-shrink-0 text-orange-400 border border-orange-500/30 animate-pulse-custom">
+                    <i class="fas fa-exclamation-triangle text-3xl"></i>
+                </div>
+
+                <!-- Content -->
+                <div class="text-center md:text-left flex-1">
+                    <h3 class="text-2xl font-bold text-orange-100 mb-2">DIQQAT: Keyingi darsga tayyorgarlik!</h3>
+                    <p class="text-gray-300 text-sm leading-relaxed mb-3">
+                        Hurmatli Mentor, dars so'ngida o'quvchilarni jiddiy ogohlantiring va quyidagilarni tayinlang:
+                    </p>
+                    <div class="bg-black/30 p-4 rounded-lg border-l-4 border-orange-500">
+                        <p class="text-orange-200 font-semibold italic text-sm md:text-base">
+                            "1 oy davomida o'tilgan barcha mavzularni (Variables, If/Else, Data Types va boshqalar) to'liq takrorlab keling. Keyingi darsda har bir o'quvchi bilan <strong>yakkama-yakka (1-on-1)</strong> nazariy savol-javob bo'ladi!"
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer class="text-center py-6 text-gray-600 text-sm border-t border-gray-800 mt-auto">
